# ChangeLog for sys-apps/portage
# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sys-apps/portage/ChangeLog,v 1.1031 2012/06/04 23:05:42 zmedico Exp $

*portage-2.2.0_alpha110 (04 Jun 2012)

  04 Jun 2012; Zac Medico <zmedico@gentoo.org> +portage-2.2.0_alpha110.ebuild,
  -portage-2.2.0_alpha108.ebuild:
  2.2.0_alpha110 version bump. This includes all of the fixes in 2.1.10.65. Bug
  #210077 tracks all bugs fixed since portage-2.1.x.

  04 Jun 2012; Zac Medico <zmedico@gentoo.org> portage-9999.ebuild:
  Support bash <4.1 again.

*portage-2.1.10.65 (04 Jun 2012)

  04 Jun 2012; Zac Medico <zmedico@gentoo.org> +portage-2.1.10.65.ebuild,
  -portage-2.1.10.63.ebuild:
  2.1.10.65 version bump. This fixes an AttributeError exception triggered by
  repoman --without-mask (regression in 2.1.10.64 and 2.2.0_alpha109), and adds
  backward compatiblity for bash <4.1. Bug #409383 tracks all bugs fixed since
  portage-2.1.10.49.

  02 Jun 2012; Zac Medico <zmedico@gentoo.org> portage-2.1.10.63.ebuild,
  portage-2.1.10.64.ebuild, portage-2.2.0_alpha108.ebuild,
  portage-2.2.0_alpha109.ebuild, portage-9999.ebuild:
  Require bash 4.1 for exec {mj_control_fd}<>${mj_control_pipe}.

*portage-2.2.0_alpha109 (02 Jun 2012)

  02 Jun 2012; Zac Medico <zmedico@gentoo.org> +portage-2.2.0_alpha109.ebuild:
  2.2.0_alpha109 version bump. This includes all of the fixes in 2.1.10.64. Bug
  #210077 tracks all bugs fixed since portage-2.1.x.

*portage-2.1.10.64 (02 Jun 2012)

  02 Jun 2012; Zac Medico <zmedico@gentoo.org> +portage-2.1.10.64.ebuild:
  2.1.10.64 version bump. This fixes bug #418309 (regression since 2.1.10.59 and
  2.2.0_alpha104 which triggers intermittent ecompressdir failures). Bug #409383
  tracks all bugs fixed since portage-2.1.10.49.

  25 May 2012; Zac Medico <zmedico@gentoo.org> -portage-2.1.10.62.ebuild,
  -portage-2.2.0_alpha107.ebuild:
  Remove old versions.

*portage-2.2.0_alpha108 (24 May 2012)
