@@ -1,6 +1,10 @@
 # ChangeLog for sys-apps/portage
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-apps/portage/ChangeLog,v 1.1031 2012/06/04 23:05:42 zmedico Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-apps/portage/ChangeLog,v 1.1032 2012/06/06 02:53:38 zmedico Exp $
+
+  06 Jun 2012; Zac Medico <zmedico@gentoo.org> -portage-2.1.10.64.ebuild,
+  -portage-2.2.0_alpha109.ebuild:
+  Remove old versions.
 
 *portage-2.2.0_alpha110 (04 Jun 2012)
 
